--- a/index.html
+++ b/index.html
@@ -14,18 +14,21 @@
 <body>
   <header>
     <h1>Card Builder</h1>
+    
     <input type="file" id="file-selector" accept=".md">
     <button onclick="download_image()">Download</button>
   </header>
   
   <div id="capture" style="padding: 10px; background: #f5da55;">
     <h1>hi</h1>
+    <p id="test">TEst</p>
   </div>
 
 
 
 </body>
 <script src="http://html2canvas.hertzen.com/dist/html2canvas.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.9.1/showdown.min.js"></script>
 <script src="js/parser.js"></script>
 <script src="js/builder.js"></script>
 <script src="js/renderer.js"></script>
