--- a/index.html
+++ b/index.html
@@ -18,11 +18,28 @@
     <input type="file" id="file-selector" accept=".md">
     <button onclick="download_image()">Download</button>
   </header>
-  
-  <div id="capture" style="padding: 10px; background: #f5da55;">
-    <h1>hi</h1>
-    <p id="test">TEst</p>
+  <div class="container">
+    <div id="capture" class="image-container">
+      <div class="grid">
+        <div class="card card1">
+          <p>IT03 - Poison Arrow Dip<br>Item<br><br>(X=&gt;5): Next arrow attack deals 1 extra poison damage.<br>fire damage<br><br></p>
+        </div>
+        <div class="card card2">
+          <p>IT03 - Poison Arrow Dip<br>Item<br><br>(X=&gt;5): Next arrow attack deals 1 extra poison damage.<br>fire damage<br><br></p>
+        </div>
+        <div class="card card3">
+          <p>IT03 - Poison Arrow Dip<br>Item<br><br>(X=&gt;5): Next arrow attack deals 1 extra poison damage.<br>fire damage<br><br></p>
+        </div>
+        <div class="card card4">
+          <p>IT03 - Poison Arrow Dip<br>Item<br><br>(X=&gt;5): Next arrow attack deals 1 extra poison damage.<br>fire damage<br><br></p>
+        </div>
+        <div class="card card5">
+          <p>IT03 - Poison Arrow Dip<br>Item<br><br>(X=&gt;5): Next arrow attack deals 1 extra poison damage.<br>fire damage<br><br></p>
+        </div>
+      </div>
+    </div>
   </div>
+
 
 
 
